codama-macros/tests/codama_attribute/field_directive/invalid_field.fail.rs
use codama_macros::codama;

#[codama(field())]
pub struct EmptyTest;

#[codama(field(number(u8)))]
pub struct NameMissingTest;

#[codama(field("age"))]
pub struct TypeMissingTest;

fn main() {}
